--- a/src/client/index.html
+++ b/src/client/index.html
@@ -239,7 +239,63 @@
         </div>
     </div>
 	<script src="script.js"></script>
+	<script>
+		document.getElementById('signinForm').addEventListener('submit', async (e) => {
+		  e.preventDefault();
+
+		  const email = document.getElementById('signinEmail').value;
+		  const password = document.getElementById('signinPassword').value;
+
+		  try {
+		    const res = await fetch('https://dip392-etik.onrender.com/api/auth/login', {
+		      method: 'POST',
+		      headers: { 'Content-Type': 'application/json' },
+		      body: JSON.stringify({ email, password })
+		    });
+
+		    const data = await res.json();
+
+		    if (res.ok) {
+		      localStorage.setItem('token', data.token);
+		      alert('Login successful!');
+		      // window.location.href = 'dashboard.html'; gibi yönlendirme yapılabilir
+		    } else {
+		      alert(data.message || 'Login failed');
+		    }
+		  } catch (err) {
+		    alert('Server error');
+		  }
+		});
+		document.getElementById('signupForm').addEventListener('submit', async (e) => {
+		  e.preventDefault();
+
+		  const name = document.getElementById('signupName').value;
+		  const surname = document.getElementById('signupSurname').value;
+		  const email = document.getElementById('signupEmail').value;
+		  const phone = document.getElementById('signupPhone').value;
+		  const birthday = document.getElementById('signupBirthday').value;
+		  const password = document.getElementById('signupPassword').value;
+
+		  try {
+		    const res = await fetch('https://dip392-etik.onrender.com/api/auth/register', {
+		      method: 'POST',
+		      headers: { 'Content-Type': 'application/json' },
+		      body: JSON.stringify({ name, surname, email, phone, birthday, password })
+		    });
+
+		    const data = await res.json();
+
+		    if (res.ok) {
+		      alert('Registration successful! You can now log in.');
+		    } else {
+		      alert(data.message || 'Registration failed');
+		    }
+		  } catch (err) {
+		    alert('Server error');
+		  }
+		});
 	
+	</script>
 </body>
 </html>
 
@@ -371,5 +427,6 @@
         </div>
     </section>
     <script src="script.js"></script>
+	
 </body>
 </html>
