--- a/src/client/index.html
+++ b/src/client/index.html
@@ -63,13 +63,13 @@
       <!-- Sign Up Form -->
       <form id="signupForm">
         <h3>Sign Up</h3>
-        <input type="text" placeholder="Name" required />
-        <input type="text" placeholder="Surname" required />
-        <input type="date" id="birthday" required />
-        <input type="tel" placeholder="Telephone Number" required />
-        <input type="email" placeholder="Email" required />
-        <input type="password" placeholder="Password" required />
-        <label><input type="checkbox" required /></label>
+		<input type="text" name="name" placeholder="Name" required />
+		<input type="text" name="surname" placeholder="Surname" required />
+		<input type="date" name="birthday" required />
+		<input type="tel" name="phone" placeholder="Telephone Number" required />
+		<input type="email" name="email" placeholder="Email" required />
+		<input type="password" name="password" placeholder="Password" required />
+        
         <div class="approved-note">By checking this box, you agree to our terms and policies.</div>
         <button class="label-orange" type="submit">Sign Up</button>
         <p class="switch">Already have an account? <span id="switchToSignin">Sign In</span></p>
