--- a/src/client/addressInfo.html
+++ b/src/client/addressInfo.html
@@ -128,28 +128,28 @@
 <body>
 
 <div class="header-section">
-  <header style="display: flex; align-items: center; justify-content: space-between; padding: 8px 16px; border-bottom: 2px solid #dee2e6;">
-    <div class="brand-wrapper">
-      <img src="logo.png" alt="Skapis Logo" class="logo">
-      <h1 class="company-name">
-        <a href="index.html">Skapis</a>
-      </h1>
-    </div>
-
-    <input type="search" placeholder="Search...">
-
-    <div class="dropdown">
-      <img src="icon.png" alt="User Icon" class="user-icon" style="width: 40px; height: 40px;">
-      <div class="dropdown-content">
-        <a href="accountInfo.html">Account Info</a>
-        <a href="addressInfo.html">Address Info</a>
-        <a href="billingInfo.html">Billing Info</a>
-        <a href="helpCenter.html">Help Center</a>
-        <a href="createShop.html">Create Shop</a>
-        <a href="newpage.html">Home</a>
-      </div>
-    </div>
-  </header>
+	<header style="display: flex; align-items: center; justify-content: space-between; padding: 1px 2px; border-bottom: 2px solid #FE7D6A60;">
+		<div style="display: flex; flex-direction: column; align-items: center;">
+		  <img src="logo.png" alt="Skapis Logo" class="logo" style="width: 90px; height: 70px; object-fit: contain;">
+		  <h1 class="company-name" style="margin: 0px 0 0 0; font-size: 35px;">
+			<a href="index.html" style="text-decoration: none; color: #FF1493; ">Skapis</a>
+		  </h1>
+		</div>
+		<input type="search" placeholder="Search...">
+		
+	  <button onclick="location.href='newpage.html'" style="background: none; border: none; cursor: pointer;">
+		<div class="dropdown">
+			<img src="icon.png" alt="User Icon" style="width: 40px; height: 40px;">
+			<div class="dropdown-content">
+				<a href="accountInfo.html">Account Info</a>
+				<a href="addressInfo.html">Address Info</a>
+				<a href="billingInfo.html">Billing Info</a>
+				<a href="helpCenter.html">Help Center</a>
+				<a href="createShop.html">Create Shop</a>
+			</div>
+		</div>
+	  </button>
+	</header>
 </div>
 
 <div class="address-container">
