--- a/src/client/index.html
+++ b/src/client/index.html
@@ -216,132 +216,44 @@
 </html>
 
 <body>
-<div class="header-section">
-	<header style="display: flex; align-items: center; justify-content: space-between; padding: 1px 2px; border-bottom: 2px solid #FE7D6A60;">
-		<div style="display: flex; flex-direction: column; align-items: center;">
-		  <img src="logo.png" alt="Skapis Logo" class="logo" style="width: 90px; height: 70px; object-fit: contain;">
-		  <h1 class="company-name" style="margin: 0px 0 0 0; font-size: 35px;">
-			<a href="index.html" style="text-decoration: none; color: #FF1493; ">Skapis</a>
-		  </h1>
-		</div>
-		<input type="search" placeholder="Search...">
-		
-	  <button onclick="location.href='newpage.html'" style="background: none; border: none; cursor: pointer;">
-		<div class="dropdown">
-			<img src="icon.png" alt="User Icon" style="width: 40px; height: 40px;">
-			<div class="dropdown-content">
-				<a href="accountInfo.html">Account Info</a>
-				<a href="addressInfo.html">Address Info</a>
-				<a href="billingInfo.html">Billing Info</a>
-				<a href="helpCenter.html">Help Center</a>
-				<a href="createShop.html">Create Shop</a>
-			</div>
-		</div>
-	  </button>
-	</header>
-</div>
+<body>
+  <div class="header-section">
+    <header style="display: flex; align-items: center; justify-content: space-between; padding: 1px 2px; border-bottom: 2px solid #FE7D6A60;">
+      <div style="display: flex; flex-direction: column; align-items: center;">
+        <img src="logo.png" alt="Skapis Logo" class="logo" style="width: 90px; height: 70px; object-fit: contain;">
+        <h1 class="company-name" style="margin: 0px 0 0 0; font-size: 35px;">
+          <a href="index.html" style="text-decoration: none; color: #FF1493;">Skapis</a>
+        </h1>
+      </div>
+      <input type="search" placeholder="Search...">
+      <button onclick="location.href='newpage.html'" style="background: none; border: none; cursor: pointer;">
+        <div class="dropdown">
+          <img src="icon.png" alt="User Icon" style="width: 40px; height: 40px;">
+          <div class="dropdown-content">
+            <a href="accountInfo.html">Account Info</a>
+            <a href="addressInfo.html">Address Info</a>
+            <a href="billingInfo.html">Billing Info</a>
+            <a href="helpCenter.html">Help Center</a>
+            <a href="createShop.html">Create Shop</a>
+          </div>
+        </div>
+      </button>
+    </header>
+  </div>
 
-    <section class="flash-discounts">
+  <section class="flash-discounts">
     <h2>Flash Discounts!!</h2>
     <div class="slider-container">
-        <button class="slider-btn left">←</button>
-        <div class="slider">
-            <!-- 10 Items with Images -->
-            <div class="frame" data-id="1">
-				<img src="images.jpg" alt="Discount Item 1" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-				<p> Example Slightly Used Bag- Medium Size - $15 - From Blabla Store </p>
-			</div>
-            <div class="frame">
-                <img src="exampletshirt.jpg" alt="Discount Item 2" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-                <p>Example - Size L - $20</p>
-            </div>
-            <div class="frame">
-                <img src="indir.jpg" alt="Discount Item 3" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-                <p>Example Furniture - $30 - From Blabla Store</p>
-            </div>
-            <div class="frame">
-                <img src="tshirtironmaiden.jpg" alt="Discount Item 4" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-                <p>Example Iron Maiden Tshirt - Size M - $40</p>
-            </div>
-            <div class="frame">
-                <img src="bracelets.jpg" alt="Discount Item 5" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-                <p>Example Handmade Bracelet - $50</p>
-            </div>
-            <div class="frame">
-                <img src="handmade.jpg" alt="Discount Item 6" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-                <p>Item 6 - Size XL - $60</p>
-            </div>
-            <div class="frame">
-                <img src="example.jpg" alt="Discount Item 7" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-                <p>Item 7 - Size S - $70</p>
-            </div>
-            <div class="frame">
-                <img src="example.jpg" alt="Discount Item 8" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-                <p>Item 8 - Size M - $80</p>
-            </div>
-            <div class="frame">
-                <img src="handmade.jpg" alt="Discount Item 9" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-                <p>Item 9 - Size L - $90</p>
-            </div>
-            <div class="frame">
-                <img src="exampletshirt.jpg" alt="Discount Item 10" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-                <p>Item 10 - Size XL - $100</p>
-            </div>
-        </div>
-        <button class="slider-btn right">→</button>
+      <button class="slider-btn left">←</button>
+      <div class="slider" id="productSlider">
+        <!-- Ürünler buraya JavaScript ile eklenecek -->
+      </div>
+      <button class="slider-btn right">→</button>
     </div>
-</section>
+  </section>
 
-    <section class="chosen-for-you">
-        <h2>Chosen For You!!</h2>
-        <div class="slider-container">
-            <button class="slider-btn left">←</button>
-            <div class="slider">
-                <!-- 10 Items -->
-                <div class="frame" data-id="1">
-					<img src="exampletshirt.jpg" alt="Discount Item 1" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-					<p>Item 1 - Size M - $10</p>
-				</div>
-				<div class="frame">
-					<img src="exampletshirt.jpg" alt="Discount Item 2" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-					<p>Item 2 - Size L - $20</p>
-				</div>
-				<div class="frame">
-					<img src="exampletshirt.jpg" alt="Discount Item 3" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-					<p>Item 3 - Size S - $30</p>
-				</div>
-				<div class="frame">
-					<img src="handmade.jpg" alt="Discount Item 4" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-					<p>Item 4 - Size M - $40</p>
-				</div>
-				<div class="frame">
-					<img src="handmade.jpg" alt="Discount Item 5" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-					<p>Item 5 - Size L - $50</p>
-				</div>
-				<div class="frame">
-					<img src="handmade.jpg" alt="Discount Item 6" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-					<p>Item 6 - Size XL - $60</p>
-				</div>
-				<div class="frame">
-					<img src="example.jpg" alt="Discount Item 7" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-					<p>Item 7 - Size S - $70</p>
-				</div>
-				<div class="frame">
-					<img src="example.jpg" alt="Discount Item 8" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-					<p>Item 8 - Size M - $80</p>
-				</div>
-				<div class="frame">
-					<img src="handmade.jpg" alt="Discount Item 9" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-					<p>Item 9 - Size L - $90</p>
-				</div>
-				<div class="frame">
-					<img src="exampletshirt.jpg" alt="Discount Item 10" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
-					<p>Item 10 - Size XL - $100</p>
-				</div>
-				</div>
-            <button class="slider-btn right">→</button>
-        </div>
-    </section>
-    <script src="script.js"></script>
+  <script src="script.js"></script>
+ 
+
 </body>
 </html>
