--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8">
     <title>Skapis</title>
     <style>
+		.btn-buy, .btn-negotiate {
+		  padding: 6px 10px;
+		  margin-top: 5px;
+		  margin-right: 5px;
+		  border: none;
+		  border-radius: 5px;
+		  font-weight: bold;
+		  cursor: pointer;
+		}
+
+		.btn-buy {
+		  background-color: #ff1493; /* yeşil */
+		  color: white;
+		}
+
+		.btn-negotiate {
+		  background-color: #fc6601; /* sarı */
+		  color: white;
+		}
+
+		.btn-buy:hover {
+		  background-color: #f754ac;
+		}
+
+		.btn-negotiate:hover {
+		  background-color: #fc9301;
+		}
+		
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -216,44 +244,188 @@
 </html>
 
 <body>
-<body>
-  <div class="header-section">
-    <header style="display: flex; align-items: center; justify-content: space-between; padding: 1px 2px; border-bottom: 2px solid #FE7D6A60;">
-      <div style="display: flex; flex-direction: column; align-items: center;">
-        <img src="logo.png" alt="Skapis Logo" class="logo" style="width: 90px; height: 70px; object-fit: contain;">
-        <h1 class="company-name" style="margin: 0px 0 0 0; font-size: 35px;">
-          <a href="index.html" style="text-decoration: none; color: #FF1493;">Skapis</a>
-        </h1>
-      </div>
-      <input type="search" placeholder="Search...">
-      <button onclick="location.href='newpage.html'" style="background: none; border: none; cursor: pointer;">
-        <div class="dropdown">
-          <img src="icon.png" alt="User Icon" style="width: 40px; height: 40px;">
-          <div class="dropdown-content">
-            <a href="accountInfo.html">Account Info</a>
-            <a href="addressInfo.html">Address Info</a>
-            <a href="billingInfo.html">Billing Info</a>
-            <a href="helpCenter.html">Help Center</a>
-            <a href="createShop.html">Create Shop</a>
-          </div>
-        </div>
-      </button>
-    </header>
-  </div>
+<div class="header-section">
+	<header style="display: flex; align-items: center; justify-content: space-between; padding: 1px 2px; border-bottom: 2px solid #FE7D6A60;">
+		<div style="display: flex; flex-direction: column; align-items: center;">
+		  <img src="logo.png" alt="Skapis Logo" class="logo" style="width: 90px; height: 70px; object-fit: contain;">
+		  <h1 class="company-name" style="margin: 0px 0 0 0; font-size: 35px;">
+			<a href="index.html" style="text-decoration: none; color: #FF1493; ">Skapis</a>
+		  </h1>
+		</div>
+		<input type="search" id="searchInput" placeholder="Search..." onkeyup="filterProducts()">
+		
+		
+	  <button onclick="location.href='newpage.html'" style="background: none; border: none; cursor: pointer;">
+		<div class="dropdown">
+			<img src="icon.png" alt="User Icon" style="width: 40px; height: 40px;">
+			<div class="dropdown-content">
+				<a href="accountInfo.html">Account Info</a>
+				<a href="addressInfo.html">Address Info</a>
+				<a href="billingInfo.html">Billing Info</a>
+				<a href="helpCenter.html">Help Center</a>
+				<a href="createShop.html">Create Shop</a>
+			</div>
+		</div>
+	  </button>
+	</header>
+</div>
 
-  <section class="flash-discounts">
+    <section class="flash-discounts">
     <h2>Flash Discounts!!</h2>
     <div class="slider-container">
-      <button class="slider-btn left">←</button>
-      <div class="slider" id="productSlider">
-        <!-- Ürünler buraya JavaScript ile eklenecek -->
-      </div>
-      <button class="slider-btn right">→</button>
+        <button class="slider-btn left">←</button>
+        <div class="slider">
+            <!-- 10 Items with Images -->
+            <div class="frame" data-id="1">
+				<img src="images.jpg" alt="Discount Item 1" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+				<p> Example Slightly Used Bag- Medium Size - $15 - From Blabla Store </p>
+  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+			</div>
+			
+			<div class="frame">
+			  <img src="example.jpg" alt="Discount Item" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+			  <p>Item 1 - Size M - $10</p>
+			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+			</div>
+            
+            <div class="frame">
+                <img src="indir.jpg" alt="Discount Item 3" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+                <p>Example Furniture - $30 - From Blabla Store</p>
+  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+            </div>
+            <div class="frame">
+                <img src="tshirtironmaiden.jpg" alt="Discount Item 4" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+                <p>Example Iron Maiden Tshirt - Size M - $40</p>
+  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+            </div>
+            <div class="frame">
+                <img src="bracelets.jpg" alt="Discount Item 5" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+                <p>Example Handmade Bracelet - $50</p>
+  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+            </div>
+            <div class="frame">
+                <img src="handmade.jpg" alt="Discount Item 6" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+                <p>Item 6 - Size XL - $60</p>
+  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+            </div>
+            <div class="frame">
+                <img src="example.jpg" alt="Discount Item 7" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+                <p>Item 7 - Size S - $70</p>
+  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+            </div>
+            <div class="frame">
+                <img src="example.jpg" alt="Discount Item 8" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+                <p>Item 8 - Size M - $80</p>
+  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+            </div>
+            <div class="frame">
+                <img src="handmade.jpg" alt="Discount Item 9" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+                <p>Item 9 - Size L - $90</p>
+  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+            </div>
+            <div class="frame">
+                <img src="exampletshirt.jpg" alt="Discount Item 10" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+                <p>Item 10 - Size XL - $100</p>
+  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+            </div>
+        </div>
+        <button class="slider-btn right">→</button>
     </div>
-  </section>
+</section>
 
-  <script src="script.js"></script>
- 
+    <section class="chosen-for-you">
+        <h2>Chosen For You!!</h2>
+        <div class="slider-container">
+            <button class="slider-btn left">←</button>
+            <div class="slider">
+                <!-- 10 Items -->
+                <div class="frame" data-id="1">
+					<img src="exampletshirt.jpg" alt="Discount Item 1" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+					<p>Item 1 - Size M - $10</p>
+	  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+	  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+				</div>
+				<div class="frame">
+					<img src="exampletshirt.jpg" alt="Discount Item 2" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+					<p>Item 2 - Size L - $20</p>
+	  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+	  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+				</div>
+				<div class="frame">
+					<img src="exampletshirt.jpg" alt="Discount Item 3" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+					<p>Item 3 - Size S - $30</p>
+	  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+	  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+				</div>
+				<div class="frame">
+					<img src="handmade.jpg" alt="Discount Item 4" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+					<p>Item 4 - Size M - $40</p>
+	  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+	  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+				</div>
+				<div class="frame">
+					<img src="handmade.jpg" alt="Discount Item 5" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+					<p>Item 5 - Size L - $50</p>
+	  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+	  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+				</div>
+				<div class="frame">
+					<img src="handmade.jpg" alt="Discount Item 6" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+					<p>Item 6 - Size XL - $60</p>
+	  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+	  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+				</div>
+				<div class="frame">
+					<img src="example.jpg" alt="Discount Item 7" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+					<p>Item 7 - Size S - $70</p>
+	  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+	  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+				</div>
+				<div class="frame">
+					<img src="example.jpg" alt="Discount Item 8" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+					<p>Item 8 - Size M - $80</p>
+	  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+	  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+				</div>
+				<div class="frame">
+					<img src="handmade.jpg" alt="Discount Item 9" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+					<p>Item 9 - Size L - $90</p>
+	  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+	  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+				</div>
+				<div class="frame">
+					<img src="exampletshirt.jpg" alt="Discount Item 10" style="width: 120px; height: 110px; object-fit: contain; margin-bottom: 2px;">
+					<p>Item 10 - Size XL - $100</p>
+	  			  <button class="btn-buy" onclick="buyProduct('Item 1')">BUY</button>
+	  			  <button class="btn-negotiate" onclick="negotiateProduct('Item 1')">NEGOTIATE</button>
+				</div>
+				</div>
+            <button class="slider-btn right">→</button>
+        </div>
+    </section>
+    <script src="script.js"></script>
+	<script>
+	  function filterProducts() {
+	    const input = document.getElementById("searchInput");
+	    const filter = input.value.toLowerCase();
+	    const productCards = document.querySelectorAll(".frame");
 
+	    productCards.forEach(card => {
+	      const text = card.textContent.toLowerCase();
+	      card.style.display = text.includes(filter) ? "block" : "none";
+	    });
+	  }
+	</script>
+	
 </body>
 </html>
