--- a/src/client/index.html
+++ b/src/client/index.html
@@ -261,9 +261,9 @@
 			<div class="dropdown-content">
 				<a href="accountInfo.html">Account Info</a>
 				<a href="addressInfo.html">Address Info</a>
-				<a href="billingInfo.html">Billing Info</a>
+				<a href="myOrders.html">My Orders</a>
 				<a href="helpCenter.html">Help Center</a>
-				<a href="createShop.html">Create Shop</a>
+				<a href="createShop.html">My Shop</a>
 			</div>
 		</div>
 	  </button>
