--- a/src/client/createShop.html
+++ b/src/client/createShop.html
@@ -195,6 +195,10 @@
    <h3 style="margin-top:30px;">Incoming Offers</h3>
    <ul id="offersList"></ul>
  </div>
+ <div class="shop-container" id="dashboardSection">
+   <h3>Negotiation Offers</h3>
+   <div id="offersContainer"></div>
+ </div>
 </div>
 <script src="createShop.js"></script>
 
